src/objects/Poker_Estimate__c.object
<CustomObject>
    <description>Tracks/records each player&apos;s estimate for each hand (user story) of poker.</description>
    <fields>
        <fullName>Card_Played__c</fullName>
        <description>The actual card that the player submitted.</description>
        <label>Card Played</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>89</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <description>The user-submitted estimate.</description>
        <label>Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Poker_Game__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the game that this estimate is related to. This field is necessary since the Streaming API PushTopic queries don&apos;t currently support relationships. This will allow filtering in the subscription.</description>
        <label>Poker Game</label>
        <referenceTo>Poker_Game__c</referenceTo>
        <relationshipLabel>Poker Estimates</relationshipLabel>
        <relationshipName>Poker_Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Poker_Hand__c</fullName>
        <description>The hand that this estimate is being cast for.</description>
        <label>Poker Hand</label>
        <referenceTo>Poker_Hand__c</referenceTo>
        <relationshipLabel>Poker Estimates</relationshipLabel>
        <relationshipName>Poker_Estimates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Poker_Player__c</fullName>
        <description>The player that is making this estimate.</description>
        <label>Poker Player</label>
        <referenceTo>Poker_Player__c</referenceTo>
        <relationshipLabel>Poker Estimates</relationshipLabel>
        <relationshipName>Poker_Estimates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Translated_Estimate__c</fullName>
        <description>Converted card played in number format.</description>
        <formula>IF(ISPICKVAL(Card_Played__c, &apos;0&apos;), 0, 
    IF(ISPICKVAL(Card_Played__c, &apos;1&apos;), 1, 
        IF(ISPICKVAL(Card_Played__c, &apos;2&apos;), 2, 
            IF(ISPICKVAL(Card_Played__c, &apos;3&apos;), 3, 
                IF(ISPICKVAL(Card_Played__c, &apos;5&apos;), 5, 
                    IF(ISPICKVAL(Card_Played__c, &apos;8&apos;), 8, 
                        IF(ISPICKVAL(Card_Played__c, &apos;13&apos;), 13, 
                            IF(ISPICKVAL(Card_Played__c, &apos;21&apos;), 21, 
                                IF(ISPICKVAL(Card_Played__c, &apos;34&apos;), 34, 
                                    IF(ISPICKVAL(Card_Played__c, &apos;56&apos;), 56, 
                                        IF(ISPICKVAL(Card_Played__c, &apos;89&apos;), 89, 
                                            -1
                                        )
                                    )
                                )
                            )
                        )
                    )
                )
            )
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Translated Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls if the estimate should be visible to other players.</description>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Poker Estimate</label>
    <nameField>
        <displayFormat>PE-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Poker Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>